--- a/argocd-install/argo-cd/charts/redis-ha/Chart.yaml
+++ b/argocd-install/argo-cd/charts/redis-ha/Chart.yaml
@@ -8,7 +8,7 @@ keywords:
 - keyvalue
 - database
 maintainers:
-- email: salimsalaues@gmail.com
+- email: haritha356535@gmail.com
   name: ssalaues
 - email: aaron.layfield@gmail.com
   name: dandydeveloper
